dts/testData/inspections/propertyName/Invalid.dtsi
<error descr="Bad character \"@\" in property name">pro@p</error> = "value";